# coursework2

./: README.md  main.py  pyproject.toml
src/: hh.py  interaction_user.py  json_saver.py  parser.py  vacancy.py
tests/: conftest.py  test_hh.py  test_interaction_user.py  test_vacancy.py
