[project]
name = "coursework2"
version = "0.1.0"
description = ""
authors = [
    {name = "Алексей Коновалов",email = "lex-sorokin@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "mypy (>=1.17.1,<2.0.0)",
    "types-requests (>=2.32.4.20250809,<3.0.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "coursework2", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
